// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApolloClient constructor will throw an error if cache is not passed in 1`] = `
"In order to initialize Apollo Client, you must specify 'link' and 'cache' properties in the options object.
These options are part of the upgrade requirements when migrating from Apollo Client 1.x to Apollo Client 2.x.
For more information, please visit: https://www.apollographql.com/docs/tutorial/client.html#apollo-client-setup"
`;

exports[`ApolloClient constructor will throw an error if link is not passed in 1`] = `
"In order to initialize Apollo Client, you must specify 'link' and 'cache' properties in the options object.
These options are part of the upgrade requirements when migrating from Apollo Client 1.x to Apollo Client 2.x.
For more information, please visit: https://www.apollographql.com/docs/tutorial/client.html#apollo-client-setup"
`;

exports[`ApolloClient write then read will not use a default id getter if either _id or id is present when __typename is not also present 1`] = `
Object {
  "$ROOT_QUERY.bar": Object {
    "foo": Object {
      "generated": true,
      "id": "$ROOT_QUERY.bar.foo",
      "type": "id",
      "typename": undefined,
    },
    "i": 10,
    "j": 11,
  },
  "$ROOT_QUERY.bar.foo": Object {
    "_id": "barfoo",
    "k": 12,
    "l": 13,
  },
  "$ROOT_QUERY.foo": Object {
    "bar": Object {
      "generated": false,
      "id": "bar:foobar",
      "type": "id",
      "typename": "bar",
    },
    "c": 3,
    "d": 4,
  },
  "ROOT_QUERY": Object {
    "a": 1,
    "b": 2,
    "bar": Object {
      "generated": true,
      "id": "$ROOT_QUERY.bar",
      "type": "id",
      "typename": undefined,
    },
    "foo": Object {
      "generated": true,
      "id": "$ROOT_QUERY.foo",
      "type": "id",
      "typename": undefined,
    },
    "g": 8,
    "h": 9,
  },
  "bar:foobar": Object {
    "e": 5,
    "f": 6,
    "id": "foobar",
  },
}
`;

exports[`ApolloClient write then read will not use a default id getter if id and _id are not present 1`] = `
Object {
  "$ROOT_QUERY.bar": Object {
    "__typename": "bar",
    "foo": Object {
      "generated": true,
      "id": "$ROOT_QUERY.bar.foo",
      "type": "id",
      "typename": "foo",
    },
    "i": 10,
    "j": 11,
  },
  "$ROOT_QUERY.bar.foo": Object {
    "__typename": "foo",
    "k": 12,
    "l": 13,
  },
  "$ROOT_QUERY.foo": Object {
    "__typename": "foo",
    "bar": Object {
      "generated": true,
      "id": "$ROOT_QUERY.foo.bar",
      "type": "id",
      "typename": "bar",
    },
    "c": 3,
    "d": 4,
  },
  "$ROOT_QUERY.foo.bar": Object {
    "__typename": "bar",
    "e": 5,
    "f": 6,
  },
  "ROOT_QUERY": Object {
    "a": 1,
    "b": 2,
    "bar": Object {
      "generated": true,
      "id": "$ROOT_QUERY.bar",
      "type": "id",
      "typename": "bar",
    },
    "foo": Object {
      "generated": true,
      "id": "$ROOT_QUERY.foo",
      "type": "id",
      "typename": "foo",
    },
    "g": 8,
    "h": 9,
  },
}
`;

exports[`ApolloClient write then read will use a default id getter if __typename and _id are present 1`] = `
Object {
  "$ROOT_QUERY.foo": Object {
    "__typename": "foo",
    "bar": Object {
      "generated": false,
      "id": "bar:foobar",
      "type": "id",
      "typename": "bar",
    },
    "c": 3,
    "d": 4,
  },
  "ROOT_QUERY": Object {
    "a": 1,
    "b": 2,
    "foo": Object {
      "generated": true,
      "id": "$ROOT_QUERY.foo",
      "type": "id",
      "typename": "foo",
    },
  },
  "bar:foobar": Object {
    "__typename": "bar",
    "_id": "foobar",
    "e": 5,
    "f": 6,
  },
}
`;

exports[`ApolloClient write then read will use a default id getter if __typename and id are present 1`] = `
Object {
  "$ROOT_QUERY.foo": Object {
    "__typename": "foo",
    "bar": Object {
      "generated": false,
      "id": "bar:foobar",
      "type": "id",
      "typename": "bar",
    },
    "c": 3,
    "d": 4,
  },
  "ROOT_QUERY": Object {
    "a": 1,
    "b": 2,
    "foo": Object {
      "generated": true,
      "id": "$ROOT_QUERY.foo",
      "type": "id",
      "typename": "foo",
    },
  },
  "bar:foobar": Object {
    "__typename": "bar",
    "e": 5,
    "f": 6,
    "id": "foobar",
  },
}
`;

exports[`ApolloClient write then read will use a default id getter if one is not specified and __typename is present along with either _id or id 1`] = `
Object {
  "$ROOT_QUERY.bar": Object {
    "__typename": "bar",
    "foo": Object {
      "generated": false,
      "id": "foo:barfoo",
      "type": "id",
      "typename": "foo",
    },
    "i": 10,
    "j": 11,
  },
  "$ROOT_QUERY.foo": Object {
    "__typename": "foo",
    "bar": Object {
      "generated": false,
      "id": "bar:foobar",
      "type": "id",
      "typename": "bar",
    },
    "c": 3,
    "d": 4,
  },
  "ROOT_QUERY": Object {
    "a": 1,
    "b": 2,
    "bar": Object {
      "generated": true,
      "id": "$ROOT_QUERY.bar",
      "type": "id",
      "typename": "bar",
    },
    "foo": Object {
      "generated": true,
      "id": "$ROOT_QUERY.foo",
      "type": "id",
      "typename": "foo",
    },
    "g": 8,
    "h": 9,
  },
  "bar:foobar": Object {
    "__typename": "bar",
    "e": 5,
    "f": 6,
    "id": "foobar",
  },
  "foo:barfoo": Object {
    "__typename": "foo",
    "_id": "barfoo",
    "k": 12,
    "l": 13,
  },
}
`;

exports[`ApolloClient write then read will write data locally which will then be read back 1`] = `
Object {
  "$foo.bar": Object {
    "__typename": "Bar",
    "d": 8,
    "e": 9,
    "f": 6,
  },
  "foo": Object {
    "__typename": "Foo",
    "a": 7,
    "b": 2,
    "bar": Object {
      "generated": true,
      "id": "$foo.bar",
      "type": "id",
      "typename": "Bar",
    },
    "c": 3,
  },
}
`;

exports[`ApolloClient write then read will write data to a specific id 1`] = `
Object {
  "$ROOT_QUERY.foo": Object {
    "__typename": "foo",
    "bar": Object {
      "generated": false,
      "id": "foobar",
      "type": "id",
      "typename": "bar",
    },
    "c": 3,
    "d": 4,
  },
  "ROOT_QUERY": Object {
    "a": 1,
    "b": 2,
    "foo": Object {
      "generated": true,
      "id": "$ROOT_QUERY.foo",
      "type": "id",
      "typename": "foo",
    },
  },
  "foobar": Object {
    "__typename": "bar",
    "e": 5,
    "f": 6,
    "key": "foobar",
  },
}
`;

exports[`ApolloClient writeFragment will write some deeply nested data into the store at any id 1`] = `
Object {
  "bar": Object {
    "__typename": "Bar",
    "i": 7,
  },
  "foo": Object {
    "__typename": "Foo",
    "e": 4,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": "Bar",
    },
  },
}
`;

exports[`ApolloClient writeFragment will write some deeply nested data into the store at any id 2`] = `
Object {
  "bar": Object {
    "__typename": "Bar",
    "i": 7,
    "j": 8,
    "k": 9,
  },
  "foo": Object {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": "Bar",
    },
  },
}
`;

exports[`ApolloClient writeFragment will write some deeply nested data into the store at any id 3`] = `
Object {
  "bar": Object {
    "__typename": "Bar",
    "i": 10,
    "j": 8,
    "k": 9,
  },
  "foo": Object {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": "Bar",
    },
  },
}
`;

exports[`ApolloClient writeFragment will write some deeply nested data into the store at any id 4`] = `
Object {
  "bar": Object {
    "__typename": "Bar",
    "i": 10,
    "j": 11,
    "k": 12,
  },
  "foo": Object {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": "Bar",
    },
  },
}
`;

exports[`ApolloClient writeFragment will write some deeply nested data into the store at any id 5`] = `
Object {
  "bar": Object {
    "__typename": "Bar",
    "i": 7,
    "j": 8,
    "k": 9,
  },
  "foo": Object {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": "Bar",
    },
  },
}
`;

exports[`ApolloClient writeFragment will write some deeply nested data into the store at any id 6`] = `
Object {
  "bar": Object {
    "__typename": "Bar",
    "i": 10,
    "j": 11,
    "k": 12,
  },
  "foo": Object {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": "Bar",
    },
  },
}
`;

exports[`ApolloClient writeQuery will write some deeply nested data to the store 1`] = `
Object {
  "$ROOT_QUERY.d": Object {
    "__typename": "D",
    "e": 4,
  },
  "ROOT_QUERY": Object {
    "a": 1,
    "d": Object {
      "generated": true,
      "id": "$ROOT_QUERY.d",
      "type": "id",
      "typename": "D",
    },
  },
}
`;

exports[`ApolloClient writeQuery will write some deeply nested data to the store 2`] = `
Object {
  "$ROOT_QUERY.d": Object {
    "__typename": "D",
    "e": 4,
    "h": Object {
      "generated": true,
      "id": "$ROOT_QUERY.d.h",
      "type": "id",
      "typename": "H",
    },
  },
  "$ROOT_QUERY.d.h": Object {
    "__typename": "H",
    "i": 7,
  },
  "ROOT_QUERY": Object {
    "a": 1,
    "d": Object {
      "generated": true,
      "id": "$ROOT_QUERY.d",
      "type": "id",
      "typename": "D",
    },
  },
}
`;

exports[`ApolloClient writeQuery will write some deeply nested data to the store 3`] = `
Object {
  "$ROOT_QUERY.d": Object {
    "__typename": "D",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "generated": true,
      "id": "$ROOT_QUERY.d.h",
      "type": "id",
      "typename": "H",
    },
  },
  "$ROOT_QUERY.d.h": Object {
    "__typename": "H",
    "i": 7,
    "j": 8,
    "k": 9,
  },
  "ROOT_QUERY": Object {
    "a": 1,
    "b": 2,
    "c": 3,
    "d": Object {
      "generated": true,
      "id": "$ROOT_QUERY.d",
      "type": "id",
      "typename": "D",
    },
  },
}
`;
